add site header top

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uz">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +13,60 @@
       rel="stylesheet"
     />
     <!-- CCS -->
+    <link rel="stylesheet" href="./style/normalize.css" />
     <link rel="stylesheet" href="./style/main.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- SITE HEADER -->
+    <header class="site-header">
+      <div class="header-top">
+        <div class="header-top-container container">
+          <a class="site-logo" href="#">
+            <img
+              src="./images/NAMANGANLIKLAR24.svg"
+              alt="NAMANGANLIKLAR24 logo"
+            />
+          </a>
+
+          <ul class="exchange-rate">
+            <li class="exchange-rate-item">
+              <span>$</span>
+              <span>10137.2</span>
+            </li>
+            <li class="exchange-rate-item">
+              <span>P</span>
+              <span>138.26</span>
+            </li>
+          </ul>
+
+          <div class="search">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="16"
+              height="16"
+              viewBox="0 0 16 16"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M2.16667 7.16667C2.16667 4.40917 4.40917 2.16667 7.16667 2.16667C9.92417 2.16667 12.1667 4.40917 12.1667 7.16667C12.1667 9.92417 9.92417 12.1667 7.16667 12.1667C4.40917 12.1667 2.16667 9.92417 2.16667 7.16667ZM15.2558 14.0775L12.4267 11.2475C13.3042 10.1192 13.8333 8.705 13.8333 7.16667C13.8333 3.49083 10.8425 0.5 7.16667 0.5C3.49083 0.5 0.5 3.49083 0.5 7.16667C0.5 10.8425 3.49083 13.8333 7.16667 13.8333C8.705 13.8333 10.1192 13.3042 11.2475 12.4267L14.0775 15.2558C14.24 15.4183 14.4533 15.5 14.6667 15.5C14.88 15.5 15.0933 15.4183 15.2558 15.2558C15.5817 14.93 15.5817 14.4033 15.2558 14.0775Z"
+                fill="#8D8D8D"
+              />
+            </svg>
+            <input type="text" placeholder="Поиск" />
+          </div>
+
+          <div class="language">
+            <span class="language-uz">УЗ</span>
+            <span class="language-ru">РУ</span>
+          </div>
+
+          <a class="main-btn" href="">
+            <div>Войти</div>
+          </a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
